--- a/Sources/Ditch.Steem/Ditch.Steem.csproj
+++ b/Sources/Ditch.Steem/Ditch.Steem.csproj
@@ -23,7 +23,10 @@
 
   <ItemGroup>
     <PackageReference Include="Cryptography.ECDSA.Secp256K1" Version="1.1.2" />
-    <PackageReference Include="Ditch.Core" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ditch.Core\Ditch.Core.csproj" />
   </ItemGroup>
 
 </Project>
